# static-toml

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  messages.toml  rustfmt.toml
.github/workflows/: cargo.yml
doc/: crate.md  macro.md
examples/: config.rs  config.toml  example.rs
examples/cargo/: .gitignore  Cargo.toml
examples/cargo/src/: lib.rs
examples/toml_example_config/: Cargo.toml  example.toml
examples/toml_example_config/src/: main.rs
src/: args.rs  lib.rs  parse.rs  snapshot.rs
src/snapshot/: mod.rs  static_tokens.rs  tests.rs  type_tokens.rs
src/toml_tokens/: mod.rs  static_tokens.rs  tests.rs  type_tokens.rs
src/toml_tokens/tests/: mod.rs  static_tokens.rs  type_tokens.rs
