[package]
name = "static-toml"
version = "1.0.1"
edition = "2021"
authors = ["Tim 'Piepmatz' Hesse"]
exclude = [".github/"]
repository = "https://github.com/cptpiepmatz/static-toml"
description = "Effortlessly embed TOML files into your Rust code as static data with custom data structures."
license = "MIT"
keywords = ["static", "include", "embed", "toml", "config"]
categories = ["config", "data-structures"]

[lib]
proc-macro = true

[[example]]
name = "example"

[dependencies]
convert_case = "0.6"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"
toml = "0.8"

[dev-dependencies]
syn = { version = "2", features = ["extra-traits"] }
